[package]
name = "concurrent_prime_sieve"
version = "0.1.1"
authors = ["FrogBomb <TLBlanchet@gmail.com>"]
keywords = ["primes", "concurrent", "fast", "generator", "math"]

description = "Tools for generating filters and collections with primes concurrently. \n Rust implementation of the Sieve of Atkin."

repository = "https://github.com/FrogBomb/prime_sieve"

readme = "README.md"

categories = ["algorithms", "concurrency", "science"]

license = "MIT"

[badges]
# Travis CI: `repository` is required. `branch` is optional; default is `master`
travis-ci = { repository = "https://travis-ci.org/FrogBomb/prime_sieve", branch = "master" }

[dependencies]
num_cpus = "1.2.1"
time = "*"
# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
